--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>exificient-for-css</artifactId>
 	<name>EXIficient for CSS</name>
 	<url>http://exificient.github.io/</url>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<description>EXIficient is an open source implementation of the W3C Efficient XML Interchange
     (EXI) format specification written in the Java programming language. The EXI format is a very
@@ -39,7 +39,7 @@
 		<connection>scm:git:git://github.com/EXIficient/exificient-for-css.git</connection>
 		<developerConnection>scm:git:https://github.com/EXIficient/exificient-for-css.git</developerConnection>
 		<url>https://github.com/EXIficient/exificient-for-css</url>
-		<tag>HEAD</tag>
+		<tag>v1.0.0</tag>
 	</scm>
 
 	<dependencies>
