--- a/.classpath
+++ b/.classpath
@@ -33,9 +33,9 @@
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.25/cssparser-0.9.25-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/1.0.0/exificient-1.0.0.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/1.0.0/exificient-1.0.0-sources.jar">
+	<classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/1.0.1-SNAPSHOT/exificient-1.0.1-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/1.0.1-SNAPSHOT/exificient-1.0.1-SNAPSHOT-sources.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/1.0.0/exificient-1.0.0-javadoc.jar!/"/>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/1.0.1-SNAPSHOT/exificient-1.0.1-SNAPSHOT-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/1.0.0/exificient-core-1.0.0.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/1.0.0/exificient-core-1.0.0-sources.jar">
