--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.siemens.ct.exi</groupId>
 			<artifactId>exificient</artifactId>
-			<version>1.0.0</version><!-- -SNAPSHOT -->
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
 		<!-- TEST dependencies -->
 		<dependency>
