--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>exificient-for-css</artifactId>
 	<name>EXIficient for CSS</name>
 	<url>http://exificient.github.io/</url>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.4-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>EXIficient is an open source implementation of the W3C Efficient XML Interchange
     (EXI) format specification written in the Java programming language. The EXI format is a very
@@ -57,7 +57,7 @@
 		<dependency>
 			<groupId>com.siemens.ct.exi</groupId>
 			<artifactId>exificient</artifactId>
-			<version>1.0.2-SNAPSHOT</version>
+			<version>1.0.4</version><!-- -SNAPSHOT -->
 		</dependency>
 		<!-- TEST dependencies -->
 		<dependency>
